--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<style>
+  .pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+<style>
+ 
+  
 <h1>Hello World!</h1>
+ <div class="pagination">
+   <a class="active" href="index.html">1</a>
+   <a>2</a>
+   <a>3</a>
+ </div>
