--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
+<html>
+<head>
 <style>
-  .pagination {
+.pagination {
   display: inline-block;
 }
 
@@ -9,12 +12,22 @@
   padding: 8px 16px;
   text-decoration: none;
 }
-<style>
- 
-  
-<h1>Hello World!</h1>
- <div class="pagination">
-   <a class="active" href="index.html">1</a>
-   <a>2</a>
-   <a>3</a>
- </div>
+</style>
+</head>
+<body>
+
+<h2>Simple Pagination</h2>
+
+<div class="pagination">
+  <a href="#">&laquo;</a>
+  <a href="#">1</a>
+  <a href="#">2</a>
+  <a href="#">3</a>
+  <a href="#">4</a>
+  <a href="#">5</a>
+  <a href="#">6</a>
+  <a href="#">&raquo;</a>
+</div>
+
+</body>
+</html>
