--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   float: left;
   padding: 8px 16px;
   text-decoration: none;
+  text-align: center;
 }
+h1 {text-align: center;}
 </style>
 </head>
 <body>
