--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <style>
 .pagination {
   display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 
 .pagination a {
@@ -18,7 +20,7 @@ h1 {text-align: center;}
 </head>
 <body>
 
-<h1>Simple Pagination</h1>
+<h1>Narrative Visualization</h1>
 
 <div class="pagination">
   <a href="#">&laquo;</a>
