--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ h1 {text-align: center;}
 
 <div class="pagination">
   <a href="#">&laquo;</a>
-  <a href="#">1</a>
-  <a href="#">2</a>
-  <a href="#">3</a>
-  <a href="#">4</a>
+  <a class="active" href="index.html">1</a>
+  <a href="italy-wine.html">2</a>
+  <a href="france-wine.html">3</a>
+  <a href="us-wine.html">4</a>
   <a href="#">5</a>
   <a href="#">6</a>
   <a href="#">&raquo;</a>
