--- a/index.html
+++ b/index.html
@@ -20,17 +20,25 @@ h1 {text-align: center;}
 </head>
 <body>
 
-<h1>Narrative Visualization</h1>
+<div align="center">
+  <h1>Wines Around The World:</h1>
+  <p>What is the relationship between price and quality rating of wines in the United States, France, and Italy?</br>
+  Which country has the most bang for your buck - the cheapest wines with the highest quality?</br>
+  Which country has the most refined wines - the most expensive wines with the highest quality?</br>
+  And which country has the worst wines - the cheapest wines with the lowest quality?</br>
+  Click through this slideshow to find out! 
+  </p>
 
-<div class="pagination">
-  <a href="#">&laquo;</a>
-  <a class="active" href="index.html">1</a>
-  <a href="italy-wine.html">2</a>
-  <a href="france-wine.html">3</a>
-  <a href="us-wine.html">4</a>
-  <a href="#">5</a>
-  <a href="#">6</a>
-  <a href="#">&raquo;</a>
+  <div class="pagination">
+    <a href="#">&laquo;</a>
+    <a class="active" href="index.html">1</a>
+    <a href="italy-wine.html">2</a>
+    <a href="france-wine.html">3</a>
+    <a href="us-wine.html">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#">&raquo;</a>
+  </div>
 </div>
 
 </body>
