--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ h1 {text-align: center;}
   <div class="pagination">
     <a href="#">&laquo;</a>
     <a class="active" href="index.html">1</a>
-    <a href="italy-wine.html">2</a>
-    <a href="france-wine.html">3</a>
-    <a href="us-wine.html">4</a>
+    <a href="bangforyourbuck.html">2</a>
+    <a href="refinedwines.html">3</a>
+    <a href="worstwines.html">4</a>
     <a href="#">5</a>
     <a href="#">6</a>
     <a href="#">&raquo;</a>
