--- a/refinedwines.html
+++ b/refinedwines.html
@@ -1,1 +1,40 @@
-<h1>Winner: Most Refined Wines!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.pagination {
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-align: center;
+}
+h1 {text-align: center;}
+</style>
+</head>
+<body>
+ 
+<div align="center">
+<h1>Winner: Most refined wines!</h1>
+  
+<div class="pagination">
+  <a href="#">&laquo;</a>
+  <a class="active" href="index.html">1</a>
+  <a href="bangforyourbuck.html">2</a>
+  <a href="refinedwines.html">3</a>
+  <a href="worstwines.html">4</a>
+  <a href="#">5</a>
+  <a href="#">6</a>
+  <a href="#">&raquo;</a>
+</div>
+
+</div>
+
+</body>
+</html>
