--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ h1 {text-align: center;}
     <a href="refinedwines.html">3</a>
     <a href="worstwines.html">4</a>
     <a href="#">5</a>
-    <a href="#">6</a>
-    <a href="#">&raquo;</a>
+    <a href="bangforyourbuck.html">&raquo;</a>
   </div>
 </div>
 
