--- a/bangforyourbuck.html
+++ b/bangforyourbuck.html
@@ -30,8 +30,7 @@ h1 {text-align: center;}
   <a href="refinedwines.html">3</a>
   <a href="worstwines.html">4</a>
   <a href="#">5</a>
-  <a href="#">6</a>
-  <a href="#">&raquo;</a>
+  <a href="refinedwines.html">&raquo;</a>
 </div>
 
 </div>
