--- a/refinedwines.html
+++ b/refinedwines.html
@@ -24,7 +24,7 @@ h1 {text-align: center;}
 <h1>Winner: Most refined wines!</h1>
   
 <div class="pagination">
-  <a href="#">&laquo;</a>
+  <a href="bangforyourbuck.html">&laquo;</a>
   <a class="active" href="index.html">1</a>
   <a href="bangforyourbuck.html">2</a>
   <a href="refinedwines.html">3</a>
