--- a/bangforyourbuck.html
+++ b/bangforyourbuck.html
@@ -24,9 +24,9 @@ h1 {text-align: center;}
 <h1>Winner: Bang for your buck!</h1>
   
 <div class="pagination">
-  <a href="#">&laquo;</a>
-  <a class="active" href="index.html">1</a>
-  <a href="bangforyourbuck.html">2</a>
+  <a href="index.html">&laquo;</a>
+  <a href="index.html">1</a>
+  <a class="active" a href="bangforyourbuck.html">2</a>
   <a href="refinedwines.html">3</a>
   <a href="worstwines.html">4</a>
   <a href="#">5</a>
