--- a/refinedwines.html
+++ b/refinedwines.html
@@ -25,9 +25,9 @@ h1 {text-align: center;}
   
 <div class="pagination">
   <a href="bangforyourbuck.html">&laquo;</a>
-  <a class="active" href="index.html">1</a>
+  <a href="index.html">1</a>
   <a href="bangforyourbuck.html">2</a>
-  <a href="refinedwines.html">3</a>
+  <a class="active" href="refinedwines.html">3</a>
   <a href="worstwines.html">4</a>
   <a href="#">5</a>
   <a href="worstwines.html">&raquo;</a>
