--- a/bangforyourbuck.html
+++ b/bangforyourbuck.html
@@ -26,7 +26,7 @@ h1 {text-align: center;}
 <div class="pagination">
   <a href="index.html">&laquo;</a>
   <a href="index.html">1</a>
-  <a class="active" a href="bangforyourbuck.html">2</a>
+  <a class="active" href="bangforyourbuck.html">2</a>
   <a href="refinedwines.html">3</a>
   <a href="worstwines.html">4</a>
   <a href="#">5</a>
