--- a/worstwines.html
+++ b/worstwines.html
@@ -25,10 +25,10 @@ h1 {text-align: center;}
   
 <div class="pagination">
   <a href="refinedwines.html">&laquo;</a>
-  <a class="active" href="index.html">1</a>
+  <a href="index.html">1</a>
   <a href="bangforyourbuck.html">2</a>
   <a href="refinedwines.html">3</a>
-  <a href="worstwines.html">4</a>
+  <a class="active" href="worstwines.html">4</a>
   <a href="#">5</a>
   <a href="#">&raquo;</a>
 </div>
