--- a/bangforyourbuck.html
+++ b/bangforyourbuck.html
@@ -15,6 +15,12 @@
   text-decoration: none;
   text-align: center;
 }
+
+.pagination a.active {
+  background-color: red;
+  color: white;
+}
+
 h1 {text-align: center;}
 </style>
 </head>
