--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@ h1 {text-align: center;}
   </div>
 </div>
 
+<script src="https://d3js.org/d3.v4.js"></script>
+<script>
+
+d3.select("body").append("span")
+    .text("Hello, world!");
+
+</script>
+
 </body>
 </html>
