--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ h1 {text-align: center;}
   </div>
 </div>
 
-<script src="https://d3js.org/d3.v4.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/d3/d3/v3.5.16/d3.js"></script>
 <script>
 
 d3.select("body").append("span")
