--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ h1 {text-align: center;}
   Click through this slideshow to find out! 
   </p>
 
+  <div id="my_dataviz"></div>
   <div class="pagination">
     <a href="#">&laquo;</a>
     <a class="active" href="index.html">1</a>
@@ -49,8 +50,45 @@ h1 {text-align: center;}
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-d3.select("body").append("span")
-    .text("Hello, world!");
+d3.csv("winemag-data.csv", 
+   function(data) {
+  
+var margin = {top: 10, right: 30, bottom: 30, left: 60},
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
+
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+  var x = d3.scaleLinear()
+    .domain([0, 4000])
+    .range([ 0, width ]);
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
+
+  var y = d3.scaleLinear()
+    .domain([0, 500000])
+    .range([ height, 0]);
+  svg.append("g")
+    .call(d3.axisLeft(y));
+
+  svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) { return x(d.price); } )
+      .attr("cy", function (d) { return y(d.points); } )
+      .attr("r", 1.5)
+      .style("fill", "#69b3a2")
+    }
+ );
 
 </script>
 
