--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h1 {text-align: center;}
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-d3.csv("winemag-data.csv", 
+d3.csv("wine-data.csv", 
    function(data) {
   
 var margin = {top: 10, right: 30, bottom: 30, left: 60},
