--- a/index.html
+++ b/index.html
@@ -70,23 +70,26 @@ var svg = d3.select("#my_dataviz")
     .range([ 0, width ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
-    .append('text')
-          .attr('class', 'axis-label')
-          .attr('x', innerWidth / 2)
-          .attr('y', 100)
-          .text('Price');
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
     .domain([70, 100])
     .range([ height, 0]);
   svg.append("g")
-      .append('text')
-          .attr('class', 'axis-label')
-          .attr('x', innerWidth / 2)
-          .attr('y', 100)
-          .text('Ranking in Points');
     .call(d3.axisLeft(y));
+  
+  svg.append("text")
+    .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.bottom) + ")")  
+    .style("text-anchor", "middle")
+    .text("x axis label");
+
+  svg.append("text")
+    .attr("transform", "rotate(-90)")
+    .attr("y", 0 - margin.left)
+    .attr("x", 0 - (height / 2))
+    .attr("dy", "1em")
+    .style("text-anchor", "middle")
+    .text("y axis label"); 
 
   svg.append('g')
     .selectAll("dot")
