--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ var svg = d3.select("#my_dataviz")
   svg.append("text")
     .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.bottom) + ")")  
     .style("text-anchor", "middle")
-    .text("x axis label");
+    .text("Price ($)");
 
   svg.append("text")
     .attr("transform", "rotate(-90)")
@@ -89,7 +89,7 @@ var svg = d3.select("#my_dataviz")
     .attr("x", 0 - (height / 2))
     .attr("dy", "1em")
     .style("text-anchor", "middle")
-    .text("y axis label"); 
+    .text("Ranking (Points)"); 
 
   svg.append('g')
     .selectAll("dot")
