--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ d3.csv("wine-data.csv",
    function(data) {
   
 var margin = {top: 10, right: 30, bottom: 30, left: 60},
-    width = 300 - margin.left - margin.right,
-    height = 240 - margin.top - margin.bottom;
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
 
 var svg = d3.select("#my_dataviz")
   .append("svg")
@@ -79,7 +79,7 @@ var svg = d3.select("#my_dataviz")
     .call(d3.axisLeft(y));
   
   svg.append("text")
-    .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.bottom) + ")")  
+    .attr("transform", "translate(" + (width / 2) + " ," + (height) + ")")  
     .style("text-anchor", "middle")
     .text("Price ($)");
 
