--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   display: inline-block;
   display: flex;
   justify-content: center;
-  margin: 20;
+  padding: 20px;
 }
 
 .pagination a {
@@ -68,14 +68,14 @@ var svg = d3.select("#my_dataviz")
 
   var x = d3.scaleLinear()
     .domain([0, 250])
-    .range([ 0, width ]);
+    .range([ 0, 460 ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
     .domain([70, 100])
-    .range([ height, 0]);
+    .range([ 400, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
   
@@ -99,12 +99,12 @@ var svg = d3.select("#my_dataviz")
     .append("circle")
       .attr("cx", function (d) {
         if (d.country==="Italy") {
-          return d.price; 
+          return x(d.price); 
         }
       })
       .attr("cy", function (d) { 
         if (d.country==="Italy") {
-          return d.points; 
+          return y(d.points); 
         }
       })
       .attr("r", 1.5)
