--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ h1 {text-align: center;}
 d3.csv("wine-data.csv", 
    function(data) {
   
-var margin = {top: 10, right: 30, bottom: 30, left: 60},
+var margin = {top: 10, right: 30, bottom: 40, left: 60},
     width = 460 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
 
@@ -68,19 +68,19 @@ var svg = d3.select("#my_dataviz")
 
   var x = d3.scaleLinear()
     .domain([0, 250])
-    .range([ 0, 460 ]);
+    .range([ 0, 800 ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
     .domain([70, 100])
-    .range([ 400, 0]);
+    .range([ 740, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
   
   svg.append("text")
-    .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.bottom) + ")")  
+    .attr("transform", "translate(" + (width / 2) + " ," + (height + (margin.bottom - 2)) + ")")  
     .style("text-anchor", "middle")
     .text("Price ($)");
 
