--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ var svg = d3.select("#my_dataviz")
 
   var x = d3.scaleLinear()
     .domain([0, 250])
-    .range([ 0, 800 ]);
+    .range([ 0, width ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
     .domain([70, 100])
-    .range([ 740, 0]);
+    .range([ height, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
   
@@ -107,7 +107,7 @@ var svg = d3.select("#my_dataviz")
           return y(d.points); 
         }
       })
-      .attr("r", 1.5)
+      .attr("r", 3)
       .style("fill", "#69b3a2")
     }
  );
