--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@ h1 {text-align: center;}
   Which country has the most bang for your buck - the cheapest wines with the highest quality?</br>
   Which country has the most refined wines - the most expensive wines with the highest quality?</br>
   And which country has the worst wines - the cheapest wines with the lowest quality?</br>
-  </p>
-  <p>
-  Click through this slideshow to find out which country wins each category listed above!</br>
+  Click through this slideshow to find out which country wins each category listed above!
   </p>
 
   <div id="main-viz"></div>
