--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@ h1 {text-align: center;}
   <p>What is the relationship between price and quality rating of wines in the United States, France, and Italy?</br>
   Esteemed wine connoisseurs have ranked wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale of 0 to 100.</br>
   Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
-  We ask the following questions from our data:</br>
-  Which country has the most bang for your buck - the cheapest wines with the highest quality?</br>
-  Which country has the most refined wines - the most expensive wines with the highest quality?</br>
-  And which country has the worst wines - the cheapest wines with the lowest quality?</br>
+  We will answer three questions from our data...</br>
   Click through this slideshow to find out which country wins each category listed above!
   </p>
 
