--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@ h1 {text-align: center;}
 
 <div align="center">
   <h1>Wines Around The World:</h1>
-  <p>What is the relationship between price and quality rating of wines in the United States, France, and Italy?</br>
-  Which country has the most bang for your buck - the cheapest wines with the highest quality?</br>
-  Which country has the most refined wines - the most expensive wines with the highest quality?</br>
-  And which country has the worst wines - the cheapest wines with the lowest quality?</br>
-  First, below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
-  Click through this slideshow to find out which country wins each category listed above!</br>
+  <p>Esteemed wine connoisseurs have ranked wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale of 0 to 100.</br>
+  Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
+  Let's take a deeper dive into the data and examine the correlation for each country individually.</br>
+  Click through this slideshow to see the relationship between price and points per country!</br>
   </p>
 
   <div id="main-viz"></div>
