Update and rename bangforyourbuck.html to italy.html

--- a/italy.html
+++ b/italy.html
@@ -27,16 +27,16 @@ h1 {text-align: center;}
 <body>
  
 <div align="center">
-<h1>Winner: Bang for your buck!</h1>
+<h1>Italy</h1>
   
 <div class="pagination">
   <a href="index.html">&laquo;</a>
-  <a href="index.html">1</a>
-  <a class="active" href="bangforyourbuck.html">2</a>
-  <a href="refinedwines.html">3</a>
-  <a href="worstwines.html">4</a>
+  <a href="index.html">Home</a>
+  <a class="active" href="italy.html">Italy</a>
+  <a href="france.html">France</a>
+  <a href="unitedstates.html">The United States</a>
   <a href="#">5</a>
-  <a href="refinedwines.html">&raquo;</a>
+  <a href="france.html">&raquo;</a>
 </div>
 
 </div>
