Update and rename refinedwines.html to france.html

--- a/france.html
+++ b/france.html
@@ -30,13 +30,13 @@ h1 {text-align: center;}
 <h1>Winner: Most refined wines!</h1>
   
 <div class="pagination">
-  <a href="bangforyourbuck.html">&laquo;</a>
-  <a href="index.html">1</a>
-  <a href="bangforyourbuck.html">2</a>
-  <a class="active" href="refinedwines.html">3</a>
-  <a href="worstwines.html">4</a>
+  <a href="italy.html">&laquo;</a>
+  <a href="index.html">Home</a>
+  <a href="italy.html">Italy</a>
+  <a class="active" href="france.html">France</a>
+  <a href="unitedstates.html">The United States</a>
   <a href="#">5</a>
-  <a href="worstwines.html">&raquo;</a>
+  <a href="unitedstates.html">&raquo;</a>
 </div>
 
 </div>
