Update and rename worstwines.html to unitedstates.html

--- a/unitedstates.html
+++ b/unitedstates.html
@@ -30,11 +30,11 @@ h1 {text-align: center;}
 <h1>Winner: Worst wines!</h1>
   
 <div class="pagination">
-  <a href="refinedwines.html">&laquo;</a>
-  <a href="index.html">1</a>
-  <a href="bangforyourbuck.html">2</a>
-  <a href="refinedwines.html">3</a>
-  <a class="active" href="worstwines.html">4</a>
+  <a href="france.html">&laquo;</a>
+  <a href="index.html">Home</a>
+  <a href="italy.html">Italy</a>
+  <a href="france.html">France</a>
+  <a class="active" href="unitedstates.html">The United States</a>
   <a href="#">5</a>
   <a href="#">&raquo;</a>
 </div>
