--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@ h1 {text-align: center;}
   <p>Esteemed wine connoisseurs have ranked wines from the United States, France, and Italy for WineEnthusiast Magazine, on a scale of 0 to 100.</br>
   Below is a scatterplot showing the relationship between price and quality rating for all three countries combined.</br>
   Let's take a deeper dive into the data and examine the correlation for each country individually.</br>
-  Click through this slideshow to see the relationship between price and points per country!</br>
+  Click through the tabs of this slideshow to see the relationship between price and points per country!</br>
   </p>
 
   <div id="main-viz"></div>
   <div class="pagination">
     <a href="#">&laquo;</a>
-    <a class="active" href="index.html">1</a>
-    <a href="bangforyourbuck.html">2</a>
-    <a href="refinedwines.html">3</a>
-    <a href="worstwines.html">4</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="italy.html">Italy</a>
+    <a href="france.html">France</a>
+    <a href="unitedstates.html">The United States</a>
     <a href="#">5</a>
-    <a href="bangforyourbuck.html">&raquo;</a>
+    <a href="italy.html">&raquo;</a>
   </div>
 </div>
 
