--- a/italy.html
+++ b/italy.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <style>
+  
+body {
+  font-family: "Arial", sans-serif;
+}
 .pagination {
   display: inline-block;
   display: flex;
