--- a/france.html
+++ b/france.html
@@ -30,7 +30,7 @@ h1 {text-align: center;}
 <body>
  
 <div align="center">
-<h1>Winner: Most refined wines!</h1>
+<h1>France</h1>
   
 <div class="pagination">
   <a href="italy.html">&laquo;</a>
