--- a/unitedstates.html
+++ b/unitedstates.html
@@ -30,7 +30,7 @@ h1 {text-align: center;}
 <body>
  
 <div align="center">
-<h1>Winner: Worst wines!</h1>
+<h1>The United States</h1>
   
 <div class="pagination">
   <a href="france.html">&laquo;</a>
