--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {text-align: center;}
   <div id="main-viz"></div>
   <div class="pagination">
     <a href="#">&laquo;</a>
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="index.html">Introduction</a>
     <a href="italy.html">Italy</a>
     <a href="france.html">France</a>
     <a href="unitedstates.html">The United States</a>
