--- a/france.html
+++ b/france.html
@@ -34,7 +34,7 @@ h1 {text-align: center;}
   
 <div class="pagination">
   <a href="italy.html">&laquo;</a>
-  <a href="index.html">Home</a>
+  <a href="index.html">Introduction</a>
   <a href="italy.html">Italy</a>
   <a class="active" href="france.html">France</a>
   <a href="unitedstates.html">The United States</a>
