--- a/italy.html
+++ b/italy.html
@@ -35,7 +35,7 @@ h1 {text-align: center;}
   
 <div class="pagination">
   <a href="index.html">&laquo;</a>
-  <a href="index.html">Home</a>
+  <a href="index.html">Introduction</a>
   <a class="active" href="italy.html">Italy</a>
   <a href="france.html">France</a>
   <a href="unitedstates.html">The United States</a>
