--- a/france.html
+++ b/france.html
@@ -32,6 +32,7 @@ h1 {text-align: center;}
 <div align="center">
 <h1>France</h1>
   
+<div id="france"></div>
 <div class="pagination">
   <a href="italy.html">&laquo;</a>
   <a href="index.html">Introduction</a>
@@ -41,8 +42,8 @@ h1 {text-align: center;}
   <a href="#">Conclusion</a>
   <a href="unitedstates.html">&raquo;</a>
 </div>
-
 </div>
+
 
 </body>
 </html>
