--- a/unitedstates.html
+++ b/unitedstates.html
@@ -31,7 +31,8 @@ h1 {text-align: center;}
  
 <div align="center">
 <h1>The United States</h1>
-  
+
+<div id="theus"></div>
 <div class="pagination">
   <a href="france.html">&laquo;</a>
   <a href="index.html">Introduction</a>
@@ -41,8 +42,75 @@ h1 {text-align: center;}
   <a href="#">Conclusion</a>
   <a href="#">&raquo;</a>
 </div>
-
 </div>
+  
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script>
+
+d3.csv("wine-data.csv", 
+   function(data) {
+  
+var margin = {top: 10, right: 30, bottom: 40, left: 60},
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
+
+var svg = d3.select("#theus")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+  var x = d3.scaleLinear()
+    .domain([0, 250])
+    .range([ 0, width ]);
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
+
+  var y = d3.scaleLinear()
+    .domain([70, 100])
+    .range([ height, 0]);
+  svg.append("g")
+    .call(d3.axisLeft(y));
+  
+  svg.append("text")
+    .attr("transform", "translate(" + (width / 2) + " ," + (height + (margin.bottom - 2)) + ")")  
+    .style("text-anchor", "middle")
+    .text("Price ($)")
+    .style("font-family", "Arial");
+
+  svg.append("text")
+    .attr("transform", "rotate(-90)")
+    .attr("y", 0 - margin.left)
+    .attr("x", 0 - (height / 2))
+    .attr("dy", "1em")
+    .style("text-anchor", "middle")
+    .text("Ranking (Points)")
+    .style("font-family", "Arial");
+
+  svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) {
+        if (d.country==="The United States") {
+          return x(d.price); 
+        }
+      })
+      .attr("cy", function (d) {
+        if (d.country==="The United States") {
+          return y(d.points); 
+        }
+      })
+      .attr("r", 3)
+      .style("fill", "#69b3a2")
+    }
+ );
+
+</script>
 
 </body>
 </html>
