--- a/unitedstates.html
+++ b/unitedstates.html
@@ -102,7 +102,7 @@ var svg = d3.select("#theus")
         }
       })
       .attr("cy", function (d) {
-        if (d.country==="The United States") {
+        if (d.country==="United States") {
           return y(d.points); 
         }
       })
