--- a/index.html
+++ b/index.html
@@ -110,6 +110,25 @@ var svg = d3.select("#main-viz")
       })
       .attr("r", 3)
       .style("fill", "#69b3a2")
+      .on('mouseover', function (d, i) {
+          d3.select(this).transition()
+                .duration('100')
+                .attr("r", 7);
+          div.transition()
+               .duration(100)
+               .style("opacity", 1);
+          div.html(d.designation)
+               .style("left", (d3.event.pageX + 10) + "px")
+               .style("top", (d3.event.pageY - 15) + "px");
+     })
+     .on('mouseout', function (d, i) {
+          d3.select(this).transition()
+               .duration('200')
+               .attr("r", 5);
+          div.transition()
+               .duration('200')
+               .style("opacity", 0);
+     });
     }
  );
 
