--- a/index.html
+++ b/index.html
@@ -82,6 +82,25 @@ var svg = d3.select("#main-viz")
   svg.append("g")
     .call(d3.axisLeft(y));
   
+  var mouseover = function(d) {
+    tooltip
+      .style("opacity", 1)
+  }
+  
+  var mousemove = function(d) {
+    tooltip
+      .html("Wine country of origin<br>: " + d.country)
+      .style("left", (d3.mouse(this)[0]+90) + "px")
+      .style("top", (d3.mouse(this)[1]) + "px")
+  }
+
+  var mouseleave = function(d) {
+    tooltip
+      .transition()
+      .duration(200)
+      .style("opacity", 0)
+  }
+  
   svg.append("text")
     .attr("transform", "translate(" + (width / 2) + " ," + (height + (margin.bottom - 2)) + ")")  
     .style("text-anchor", "middle")
@@ -110,25 +129,9 @@ var svg = d3.select("#main-viz")
       })
       .attr("r", 3)
       .style("fill", "#69b3a2")
-      .on('mouseover', function (d, i) {
-          d3.select(this).transition()
-                .duration('100')
-                .attr("r", 7);
-          div.transition()
-               .duration(100)
-               .style("opacity", 1);
-          div.html(d.designation)
-               .style("left", (d3.event.pageX + 10) + "px")
-               .style("top", (d3.event.pageY - 15) + "px");
-     })
-     .on('mouseout', function (d, i) {
-          d3.select(this).transition()
-               .duration('200')
-               .attr("r", 5);
-          div.transition()
-               .duration('200')
-               .style("opacity", 0);
-     });
+      .on("mouseover", mouseover )
+      .on("mousemove", mousemove )
+      .on("mouseleave", mouseleave )
     }
  );
 
