--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@ h1 {text-align: center;}
   const annotations = [
    {
     note: {
-    label: "Hi",
-    title: "Yo",
+    label: "Cheapest and lowest ranked wine",
+    title: "France",
+    align: "left"
    },
+    connector: {
+      end: "arrow"
+    },
+    color: ["red"],
     x: 11,
     y: 82,
     dy: 90,
