--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ h1 {text-align: center;}
     note: {
     label: "Cheapest and lowest ranked wine",
     title: "France",
-    align: "left"
+    align: "left",
+    wrap: 180
    },
     connector: {
       end: "arrow"
