--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ h1 {text-align: center;}
     note: {
     label: "Cheapest and lowest ranked wine",
     title: "France",
-    align: "left",
-    wrap: 180
+    align: "left"
    },
     connector: {
+      type: "curve",
       end: "arrow"
     },
     color: ["red"],
