--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ h1 {text-align: center;}
     note: {
     label: "Most expensive wine",
     title: "The United States",
+    wrap: 150,
+    align: "right"
    },
     connector: {
       end: "arrow"
