--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ h1 {text-align: center;}
     
   svg.append("g")
     .attr("class", "annotation-group")
+    .style("font-size", "10px")
     .call(makeAnnotations);
     
     }
